# async_worker

./: README.md  docker-compose.yml  hello.py  pyproject.toml  requirements.txt
app/: database.py  main.py  models.py  worker.py
migrations/: 001_jobs.sql
tests/: test_api.py  test_db.py
