[project]
name = "async-worker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi>=0.115.12",
    "pytest-asyncio>=1.0.0",
    "pytest>=8.4.0",
    "python-dotenv>=1.1.0",
]

[tool.uv]
dev-dependencies = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "mypy>=1.16.0",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
]
